Added "Ernest Shonekan" as a president.

--- a/switch.html
+++ b/switch.html
@@ -60,23 +60,28 @@
                 year: 1990,
 
             },
-
             {
                 Id: 8,
+                name: "Ernest Shonekan",
+                year: 1993,
+            },
+
+            {
+                Id: 9,
                 name: 'Gen Sanni Abacha',
                 year: 1997,
 
             },
 
             {
-                Id: 9,
+                Id: 10,
                 name: 'Abdusalam Abubakar',
                 year: 1999,
 
             },
 
             {
-                Id: 10,
+                Id: 11,
                 name: 'Aremu Olusegun Obasanjo',
                 year: 2000,
 
@@ -90,13 +95,13 @@
             },
 
             {
-                Id: 12,
+                Id: 13,
                 name: 'Goodluck Ebele Jonathan',
                 year: 2007,
             },
 
             {
-                Id: 13,
+                Id: 14,
                 name: 'Muhammadu Buhari',
                 year: 2014,
 
@@ -108,7 +113,7 @@
 
 
 
-        var leader = Presidents[Math.floor(Math.random() * 14)];
+        var leader = Presidents[Math.floor(Math.random() * 15)];
 
         let userInput = prompt('what year did ' + leader.name + ' ' + 'rule Nigeria');
         let userDate = Number(userInput);
